<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="appName">Dine With Me?</string>
    <string name="title_activity_second">Second</string>
    <string name="SecondPage">Second Page</string>
    <string name="register">Create User</string>
    <string name="usernameR">Username</string>
    <string name="passR">Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="create">Create</string>

    <!-- MENU -->
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="shopL">Shopping List</string>
    <string name="event">Event</string>
    <string name="recipes">Recipes</string>
    <string name="logout">Logout</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_shopping_list">ShoppingList</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="title_activity_create_user">CreateUser</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_add_friend">AddFriend</string>
    <string name="title_activity_view_friends">ViewFriends</string>
    <string name="title_activity_create_event_panel">CreateEventPanel</string>
    <string name="title_activity_create_recipe">CreateRecipe</string>
    <string name="title_activity_view_recipes">ViewRecipes</string>
    <string name="title_activity_login_home">LoginHome</string>

</resources>
