<net.itca.dwm.controller.MenuActionController 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    
<LinearLayout 
    	xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#444488"
        android:orientation="vertical" >

        <Button            
		    android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="home"
            android:text="@string/home" />

        <Button
  		    android:id="@+id/friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="friends"
            android:text="@string/friends" />

        <Button
			android:id="@+id/shopL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="shopL"
            android:text="@string/shopL" />
        
        <Button
		    android:id="@+id/event"          
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="event"
            android:text="@string/event" />
        
        <Button
		    android:id="@+id/recipes"          
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="recipes"
            android:text="@string/recipes" />
        
        <Button
		    android:id="@+id/logout"            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="logout"
            android:text="@string/logout" />
</LinearLayout>
    
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#888888"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView1"
            android:layout_alignLeft="@+id/textView1"
            android:layout_marginBottom="18dp"
            android:onClick="toggleMenu"
            android:text="Toggle Menu" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="165dp"
            android:text="@string/home" />

    </RelativeLayout>
    
</net.itca.dwm.controller.MenuActionController>