<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#99CCFF"
    tools:context="net.itca.dwm.controller.login.MainActivity" >

		<TextView
		    android:id="@+id/textView3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentTop="true"
		    android:layout_centerHorizontal="true"
		    android:layout_marginTop="16dp"
		    android:text="@string/appName"
		    android:textAppearance="?android:attr/textAppearanceLarge" />

		<EditText
		    android:id="@+id/editText2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/textView2"
		    android:layout_centerHorizontal="true"
		    android:layout_marginTop="20dp"
		    android:background="@android:color/white"
		    android:ems="10"
		    android:inputType="textPassword" />

		<Button
		    android:id="@+id/button1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/textView2"
		    android:layout_below="@+id/editText2"
		    android:layout_marginTop="30dp"
		    android:onClick="login"
		    android:text="@string/Login" />

		<EditText
		    android:id="@+id/editText1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignRight="@+id/editText2"
		    android:layout_below="@+id/textView3"
		    android:layout_marginTop="136dp"
		    android:background="@android:color/white"
		    android:ems="10"
		    android:inputType="textPersonName" />

		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignBottom="@+id/editText1"
		    android:layout_alignLeft="@+id/textView2"
		    android:layout_marginBottom="55dp"
		    android:text="@string/username" />

		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/editText1"
		    android:layout_centerHorizontal="true"
		    android:layout_marginTop="24dp"
		    android:text="@string/password" />

		<ImageView
		    android:id="@+id/imageView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignRight="@+id/textView2"
		    android:layout_below="@+id/textView3"
		    android:src="@drawable/app_small" />

		<Button
		    android:id="@+id/button2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/textView3"
		    android:layout_alignParentBottom="true"
		    android:layout_marginBottom="16dp"
		    android:text="@string/register" />

</RelativeLayout>
